Quorum/Library/Tests/Expressions/Fail/InvalidVariableName.quorum
text 1
text -
text +
text *
text ]